fixed spacing

--- a/simulations/styles.css
+++ b/simulations/styles.css
@@ -20,7 +20,6 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 40px;
 }
 
 .background-video {
